--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: zetrix_flutter
-description: A new Flutter package project.
+description: Zetrix flutter SDK for Zetrix Blockchain
 version: 0.0.1
 homepage: https://docs.zetrix.com/en
 
